# signed-agent-receipts

./: .gitignore  AGENTS.md  CLAUDE.md  INSTALL-FOR-AGENTS.md  LICENSE  README.md  SECURITY-MODEL.md  action.yml  install.sh  llms.txt  pyproject.toml
.agent-receipts/: policy.yml  trusted_signers.yml
.github/: CODEOWNERS
.github/receipts/: 20260708T040023Z-hermes-agent-native.jsonl
.github/workflows/: ci.yml  pages.yml  receipts-gate.yml
agent_receipts/: __init__.py  __main__.py  analytics.py  ci_gate.py  evidence.py  fleet_digest.py  gate.py  gitdiff.py  jsonl.py  mcp_server.py  normalizers.py  policy.py  receipt.py  records.py  render.py  signing.py  trust.py  utils.py
docs/: ACCEPTING-AGENT-WORK.md  AGENT_NATIVE_INSTALL.md  BADGE.md  DEMO.md  POC_DAYS_1_5.md  RECEIPTS-GATE.md  RECEIPTS_GATE.md
docs/verifier/: index.html
examples/: README.md  agent_run.jsonl
examples/receipts/: run_example_0001.md
examples/source/: demo-run.jsonl
receipts/: pr-10.receipt.json  pr-3.receipt.json  pr-5.receipt.json  pr-8.receipt.json
schema/: agent_run.schema.json  receipt.schema.json
skills/claude-code/: SKILL.md
skills/hermes/: SKILL.md
tasks/: pr-5.md  pr-8.md
tests/: __init__.py  support.py  test_analytics.py  test_ci_gate.py  test_cli_receipt.py  test_dogfood.py  test_gate.py  test_gitdiff.py  test_install_mcp.py  test_jsonl.py  test_policy.py  test_receipt.py  test_render.py  test_signing.py  test_trust.py  test_utils.py  test_workflow_security.py
