[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "signed-agent-receipts"
version = "0.2.0"
description = "Local agent run receipts with signed JSONL records and Markdown review artifacts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "knee5 / Clevin Canales" },
]
dependencies = [
  "cryptography>=42",
  "PyYAML>=6",
]

[project.optional-dependencies]
dev = [
  "jsonschema>=4",
]

[project.scripts]
signed-agent-receipts = "agent_receipts.__main__:main"

[tool.setuptools.packages.find]
include = ["agent_receipts*"]
